--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: javac-deployment
+  name: java1-deployment
   labels:
     app: javac
 spec:
